--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,4 +16,6 @@
             android:exported="true" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
